# cksumx

./: .clang-format  .dockerignore  .editorconfig  .gitignore  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md
.github/: CODEOWNERS  FUNDING.yml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: Doxyfile
include/cksumx/: checksum_validator.hpp
packaging/: cksumx.pc.in
src/: checksum_validator.cpp  cli.cpp  crypto_util.hpp
tests/: run_tests.sh
